# pymidscene

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  llms.txt  pyproject.toml
docs/: API.md  ARCHITECTURE.md  CLI.md  CODE_REVIEW_2026-04-17.md  FIX_PROGRESS_2026-04-17.md  MODELS.md  PORTING_PROGRESS.md  README.md  TROUBLESHOOTING.md
examples/: android_basic.py  basic_usage.py  ios_basic.py  login_demo.html  login_demo.py  xhs_upload.py
examples/cli/: android-app.yaml  suite.yaml  web-search.yaml
pymidscene/: __init__.py
pymidscene/android/: README.md  __init__.py  agent.py  app_name_mapping.py  device.py  utils.py
pymidscene/cli/: __init__.py  __main__.py  agent_factory.py  args.py  batch_runner.py  config.py  main.py  player.py  printer.py  yaml_script.py
pymidscene/core/: __init__.py  dump.py  element_marker.py  js_react_report_generator.py  js_report_generator.py  logging_system.py  report_generator.py  report_template_resources.py  run_manager.py  types.py
pymidscene/core/agent/: agent.py  task_cache.py
pymidscene/core/ai_model/: __init__.py  service_caller.py  ui_tars_planning.py
pymidscene/core/ai_model/auto_glm/: __init__.py  actions.py  parser.py  planning.py  prompt.py
pymidscene/core/ai_model/models/: __init__.py  base.py  (+2 more)
pymidscene/ios/: README.md  __init__.py  agent.py  app_name_mapping.py  device.py  utils.py  webdriver_client.py
pymidscene/resources/: __init__.py
pymidscene/resources/report_template/: __init__.py  metadata.json  report.html
pymidscene/shared/: logger.py  types.py  utils.py
pymidscene/shared/env/: __init__.py  constants.py  model_config_manager.py
pymidscene/web_integration/: base.py
pymidscene/web_integration/playwright/: __init__.py  agent.py  page.py
pymidscene/webdriver/: README.md  __init__.py  client.py
tests/: __init__.py  test_cache.py  test_doubao.py  test_integration.py  test_logger.py  test_playwright.py  test_types.py  test_utils.py
tests/android/: conftest.py  test_agent.py  test_app_name_mapping.py  test_device.py  test_utils.py
tests/cli/: test_cli.py  test_cli_fixes.py
tests/core/: test_agent_scroll_routing.py  test_config_callpath_fidelity.py  test_coordinate_parser_fidelity.py  test_core_sweep_align.py  test_deepthink_locate.py  test_js_react_report_generator.py  test_perception_align.py  test_plan_cache_workflow.py  test_playwright_wrapper_parity.py  test_prompt_modules.py  test_qwen_model.py  test_report_template_resources.py  test_service_caller.py  test_session_recorder_report_fallback.py  test_xml_planner.py
tests/fixtures/report_samples/: official_style_report.html
tests/ios/: conftest.py  test_agent.py  test_app_name_mapping.py  test_device.py  test_utils.py  test_webdriver_client.py
tests/packaging/: report_smoke.py
tests/validation/: test_automation.html  test_automation.py  test_debug_locate.py  test_scroll_logic.py
(+9 files in other folders)
